--- a/src/app/info/info.component.css
+++ b/src/app/info/info.component.css
@@ -34,3 +34,9 @@ h4{
     height: 300px;
     object-fit: cover;
 }
+
+.img{
+    width: 300px;
+    height: 300px;
+    background-image: url(golub.jpg);
+}
